# LR-multipatch-refine-tests

./: CMakeLists.txt
geometries/: diff-param-domain.g2  generate.py  lshape.g2  self-loop.g2  star.g2
geometries/2D/: generate.py  lshape.g2
geometries/3D/: boxes-2-orient1.g2  boxes-2-orient2.g2  boxes-2-orient4.g2  boxes-2-orient6.g2  boxes-3.g2  boxes-7.g2  disc-stair-10.g2  disc-stair-3.g2  generate.py
src/: Test2D.cpp  Test3D.cpp  TestMatchingKnots.cpp
