project(LR-multipatch-refine)

cmake_minimum_required(VERSION 3.2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(USE_MPI "Compile with MPI support?" OFF)

find_package(LRSpline REQUIRED)
find_package(GoTools  REQUIRED)
if(USE_MPI)
  find_package(MPI REQUIRED)
  add_definitions(-DHAVE_MPI=1)
endif()

include_directories(${LRSpline_INCLUDE_DIRS} ${GoTools_INCLUDE_DIRS} ${MPI_INCLUDE_PATH})
add_definitions(${LRSpline_DEFINITIONS})

add_executable(TestMatchingKnots src/TestMatchingKnots.cpp)
target_link_libraries(TestMatchingKnots ${LRSpline_LIBRARIES} ${GoTools_LIBRARIES} ${MPI_LIBRARIES})

enable_testing()
if(USE_MPI)
  add_test(3patch_Lshape_Corner1    ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} TestMatchingKnots ${MPIEXEC_POSTFLAGS} 2 1 1)
  add_test(3patch_Lshape_Corner2    ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} TestMatchingKnots ${MPIEXEC_POSTFLAGS} 2 1 2)
  add_test(3patch_Lshape_SouthEast1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} TestMatchingKnots ${MPIEXEC_POSTFLAGS} 2 3 1)
  add_test(3patch_Lshape_SouthEast2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} TestMatchingKnots ${MPIEXEC_POSTFLAGS} 2 3 2)
  add_test(6patch_Star_Corner1      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} TestMatchingKnots ${MPIEXEC_POSTFLAGS} 3 1 1)
  add_test(6patch_Star_Corner2      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} TestMatchingKnots ${MPIEXEC_POSTFLAGS} 3 1 2)
  add_test(6patch_Star_Random1      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} TestMatchingKnots ${MPIEXEC_POSTFLAGS} 3 1 1)
  add_test(6patch_Star_Random2      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} TestMatchingKnots ${MPIEXEC_POSTFLAGS} 3 1 2)
  add_test(6patch_Star_SouthEast2   ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} TestMatchingKnots ${MPIEXEC_POSTFLAGS} 3 3 2)
else()
  add_test(LshapeCorner1      TestMatchingKnots 2 1 1)
  add_test(LshapeCorner2      TestMatchingKnots 2 1 2)
  add_test(LshapeSouthEast1   TestMatchingKnots 2 3 1)
  add_test(LshapeSouthEast2   TestMatchingKnots 2 3 2)
  add_test(StarCorner1        TestMatchingKnots 3 1 1)
  add_test(StarCorner2        TestMatchingKnots 3 1 2)
  add_test(StarRandom1        TestMatchingKnots 3 2 1)
  add_test(StarRandom2        TestMatchingKnots 3 2 2)
  add_test(StarSouthEast2     TestMatchingKnots 3 3 2)
  add_test(SelfLoopCorner1    TestMatchingKnots 4 1 1)
  add_test(SelfLoopCorner2    TestMatchingKnots 4 1 2)
  add_test(SelfLoopRandom2    TestMatchingKnots 4 2 2)
  add_test(SelfLoopRandom3    TestMatchingKnots 4 2 3)
  add_test(SelfLoopSouthEast2 TestMatchingKnots 4 3 2)
endif()
