project(LR-multipatch-refine)

cmake_minimum_required(VERSION 3.2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(USE_MPI "Compile with MPI support?" OFF)

find_package(LRSpline     REQUIRED)
find_package(GoTools      REQUIRED)
find_package(GoTrivariate REQUIRED)
if(USE_MPI)
  find_package(MPI REQUIRED)
  add_definitions(-DHAVE_MPI=1)
endif()

include_directories(${LRSpline_INCLUDE_DIRS} ${GoTools_INCLUDE_DIRS} ${GoTrivariate_INCLUDE_DIRS} ${MPI_INCLUDE_PATH})
add_definitions(${LRSpline_DEFINITIONS})

add_executable(Test2D src/Test2D.cpp)
target_link_libraries(Test2D ${LRSpline_LIBRARIES} ${GoTools_LIBRARIES} ${MPI_LIBRARIES})

add_executable(Test3D src/Test3D.cpp)
target_link_libraries(Test3D ${LRSpline_LIBRARIES} ${GoTools_LIBRARIES} ${GoTrivariate_LIBRARIES} ${MPI_LIBRARIES})

enable_testing()
if(USE_MPI)
  add_test(3patch_Lshape_Corner1    ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 2 1 1)
  add_test(3patch_Lshape_Corner2    ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 2 1 2)
  add_test(3patch_Lshape_SouthEast1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 2 3 1)
  add_test(3patch_Lshape_SouthEast2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 2 3 2)
  add_test(6patch_Star_Corner1      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 1 1)
  add_test(6patch_Star_Corner2      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 1 2)
  add_test(6patch_Star_Random1      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 1 1)
  add_test(6patch_Star_Random2      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 1 2)
  add_test(6patch_Star_SouthEast2   ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 3 2)
else()
  add_test(LshapeCorner1      Test2D 2 1 1)
  add_test(LshapeCorner2      Test2D 2 1 2)
  add_test(LshapeSouthEast1   Test2D 2 3 1)
  add_test(LshapeSouthEast2   Test2D 2 3 2)
  add_test(StarCorner1        Test2D 3 1 1)
  add_test(StarCorner2        Test2D 3 1 2)
  add_test(StarRandom1        Test2D 3 2 1)
  add_test(StarRandom2        Test2D 3 2 2)
  add_test(StarSouthEast2     Test2D 3 3 2)
  add_test(SelfLoopCorner1    Test2D 4 1 1)
  add_test(SelfLoopCorner2    Test2D 4 1 2)
  add_test(SelfLoopRandom2    Test2D 4 2 2)
  add_test(SelfLoopRandom3    Test2D 4 2 3)
  add_test(SelfLoopSouthEast2 Test2D 4 3 2)
endif()
