project(LR-multipatch-refine)

cmake_minimum_required(VERSION 3.2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(USE_MPI "Compile with MPI support?" OFF)

find_package(LRSpline     REQUIRED)
find_package(GoTools      REQUIRED)
find_package(GoTrivariate REQUIRED)
if(USE_MPI)
  find_package(MPI REQUIRED)
  add_definitions(-DHAVE_MPI=1)
endif()

include_directories(${LRSpline_INCLUDE_DIRS} ${GoTools_INCLUDE_DIRS} ${GoTrivariate_INCLUDE_DIRS} ${MPI_INCLUDE_PATH})
add_definitions(${LRSpline_DEFINITIONS})

add_executable(Test2D src/Test2D.cpp)
target_link_libraries(Test2D ${LRSpline_LIBRARIES} ${GoTools_LIBRARIES} ${MPI_LIBRARIES})

add_executable(Test3D src/Test3D.cpp)
target_link_libraries(Test3D ${LRSpline_LIBRARIES} ${GoTools_LIBRARIES} ${GoTrivariate_LIBRARIES} ${MPI_LIBRARIES})

enable_testing()
if(USE_MPI)
  add_test(2D_3patch_Lshape_Corner1    ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 2 1 1)
  add_test(2D_3patch_Lshape_Corner2    ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 2 1 2)
  add_test(2D_3patch_Lshape_SouthEast1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 2 3 1)
  add_test(2D_3patch_Lshape_SouthEast2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 2 3 2)
  add_test(2D_6patch_Star_Corner1      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 1 1)
  add_test(2D_6patch_Star_Corner2      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 1 2)
  add_test(2D_6patch_Star_Random1      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 1 1)
  add_test(2D_6patch_Star_Random2      ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 1 2)
  add_test(2D_6patch_Star_SouthEast2   ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} Test2D ${MPIEXEC_POSTFLAGS} 3 3 2)
else()
  add_test(2D_LshapeCorner1      Test2D 2 1 1)
  add_test(2D_LshapeCorner2      Test2D 2 1 2)
  add_test(2D_LshapeSouthEast1   Test2D 2 3 1)
  add_test(2D_LshapeSouthEast2   Test2D 2 3 2)
  add_test(2D_StarCorner1        Test2D 3 1 1)
  add_test(2D_StarCorner2        Test2D 3 1 2)
  add_test(2D_StarRandom1        Test2D 3 2 1)
  add_test(2D_StarRandom2        Test2D 3 2 2)
  add_test(2D_StarSouthEast2     Test2D 3 3 2)
  add_test(2D_SelfLoopCorner1    Test2D 4 1 1)
  add_test(2D_SelfLoopCorner2    Test2D 4 1 2)
  add_test(2D_SelfLoopRandom2    Test2D 4 2 2)
  add_test(2D_SelfLoopRandom3    Test2D 4 2 3)
  add_test(2D_SelfLoopSouthEast2 Test2D 4 3 2)
  add_test(3D_LshapeCorner1      Test3D 1 1 1)
  add_test(3D_LshapeCorner2      Test3D 1 1 2)
  add_test(3D_LshapeCorner3      Test3D 1 1 3)
  add_test(3D_LshapeRandom2      Test3D 1 2 2)
  add_test(3D_LshapeRandom4      Test3D 1 2 4)
  add_test(3D_LshapeSouthEast1   Test3D 1 3 1)
  add_test(3D_StairCorner1       Test3D 2 1 1)
  add_test(3D_StairCorner2       Test3D 2 1 2)
  add_test(3D_StairCorner3       Test3D 2 1 3)
  add_test(3D_StairRandom2       Test3D 2 2 2)
  add_test(3D_StairRandom4       Test3D 2 2 4)
  add_test(3D_StairSouthEast1    Test3D 2 3 1)

  add_test(3D_Orient1Corner1     Test3D 3 1 1)
  add_test(3D_Orient1Corner2     Test3D 3 1 2)
  add_test(3D_Orient1Corner3     Test3D 3 1 3)
  add_test(3D_Orient1Random2     Test3D 3 2 2)
  add_test(3D_Orient1Random4     Test3D 3 2 4)
  add_test(3D_Orient1SouthEast1  Test3D 3 3 1)
  add_test(3D_Orient2Corner1     Test3D 4 1 1)
  add_test(3D_Orient2Corner2     Test3D 4 1 2)
  add_test(3D_Orient2Corner3     Test3D 4 1 3)
  add_test(3D_Orient2Random2     Test3D 4 2 2)
  add_test(3D_Orient2Random4     Test3D 4 2 4)
  add_test(3D_Orient2SouthEast1  Test3D 4 3 1)
  add_test(3D_Orient3Corner1     Test3D 5 1 1)
  add_test(3D_Orient3Corner2     Test3D 5 1 2)
  add_test(3D_Orient3Corner3     Test3D 5 1 3)
  add_test(3D_Orient3Random2     Test3D 5 2 2)
  add_test(3D_Orient3Random4     Test3D 5 2 4)
  add_test(3D_Orient3SouthEast1  Test3D 5 3 1)
  add_test(3D_Orient4Corner1     Test3D 6 1 1)
  add_test(3D_Orient4Corner2     Test3D 6 1 2)
  add_test(3D_Orient4Corner3     Test3D 6 1 3)
  add_test(3D_Orient4Random2     Test3D 6 2 2)
  add_test(3D_Orient4Random4     Test3D 6 2 4)
  add_test(3D_Orient4SouthEast1  Test3D 6 3 1)
endif()
